[gd_scene load_steps=2 format=3 uid="uid://b0cn8t8lq7g1i"]

[ext_resource type="Script" path="res://Simulation_UI.gd" id="1_vjows"]

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_vjows")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 136.0
offset_bottom = 416.0

[node name="reset_scene" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESET SCENE"

[node name="Home" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "SET TARGET TO HOME"

[node name="Target_1" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "SET TARGET TO 1"

[node name="Target_2" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "SET TARGET TO 2"

[node name="Move_to_target" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "MOVE TO TARGET"

[node name="Start_Pick_and_Place" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START PICK & PLACE"

[connection signal="pressed" from="VBoxContainer/reset_scene" to="." method="_on_reset_scene_pressed"]
[connection signal="pressed" from="VBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="VBoxContainer/Target_1" to="." method="_on_target_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Target_2" to="." method="_on_target_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Move_to_target" to="." method="_on_move_to_target_pressed"]
[connection signal="pressed" from="VBoxContainer/Start_Pick_and_Place" to="." method="_on_start_pick_and_place_pressed"]
